# cs497-hw7

./: .gitignore
distributions/mac-intel/: plx
distributions/mac-silicon/: plx
distributions/macos/: plx
distributions/wsl2/: plx
plx/: CMakeLists.txt
plx/plx/: ArgParser.cpp  ArgParser.hpp  main.cpp
plx/plx/data/: Array.cpp  Array.hpp  Array.test.cpp  Closure.cpp  Closure.hpp  Closure.test.cpp  HashTable.cpp  HashTable.hpp  HashTable.test.cpp  InternTable.cpp  InternTable.hpp  InternTable.test.cpp  List.cpp  List.hpp  List.test.cpp  Method.cpp  Method.hpp  Method.test.cpp  Queue.cpp  Queue.hpp  Queue.test.cpp  Triple.cpp  Triple.hpp  Triple.test.cpp
plx/plx/evaluator/: Evaluator.cpp  Evaluator.hpp  Evaluator.test.cpp
plx/plx/expr/: Apply.cpp  Apply.hpp  Apply.test.cpp  BinOpExpr.cpp  BinOpExpr.hpp  BinOpExpr.test.cpp  Catch.cpp  Catch.hpp  Catch.test.cpp  Do.cpp  Do.hpp  Do.test.cpp  Drop.cpp  Drop.hpp  Drop.test.cpp  Finally.cpp  Finally.hpp  Finally.test.cpp  Function.cpp  Function.hpp  Function.test.cpp  Identifier.cpp  Identifier.hpp  Identifier.test.cpp  If.cpp  If.hpp  If.test.cpp  IndexOp.cpp  IndexOp.hpp  IndexOp.test.cpp  Let.cpp  Let.hpp  Let.test.cpp  LetIn.cpp  LetIn.hpp  LetIn.test.cpp  Match.cpp  Match.hpp  Match.test.cpp  NamedFunction.cpp  (+20 more)
plx/plx/gc/: GC.cpp  GC.hpp  GC.test.cpp  Memory.cpp  Memory.hpp  Memory.test.cpp  RegistrationType.cpp  RegistrationType.hpp
plx/plx/lexer/: Lexer.cpp  Lexer.hpp  Lexer.test.cpp  Syntax.cpp  Syntax.hpp
plx/plx/literal/: Boolean.cpp  Boolean.hpp  Boolean.test.cpp  InputStream.cpp  InputStream.hpp  InputStream.test.cpp  Integer.cpp  Integer.hpp  Integer.test.cpp  Nil.cpp  Nil.hpp  Nil.test.cpp  PrimitiveFunction.cpp  PrimitiveFunction.hpp  PrimitiveFunction.test.cpp  String.cpp  String.hpp  String.test.cpp  Symbol.cpp  Symbol.hpp  Symbol.test.cpp
plx/plx/object/: Globals.cpp  Globals.hpp  Globals.test.cpp  HashCode.cpp  HashCode.hpp  Object.cpp  Object.hpp  Object.test.cpp  Symbolic.cpp  Symbolic.hpp  ThrowException.cpp  ThrowException.hpp  TypeIds.cpp  TypeIds.hpp
plx/plx/parser/: P_Any.cpp  P_Any.hpp  P_Any.test.cpp  P_Primitive.cpp  P_Primitive.hpp  P_Primitive.test.cpp  P_ReservedWords.cpp  P_ReservedWords.hpp  P_SpecialChars.cpp  P_SpecialChars.hpp  Parser.cpp  Parser.hpp  Parser.test.cpp  Parser.test.hpp
plx/plx/parser/data/: P_Array.cpp  P_Array.test.cpp  P_Binding.cpp  P_Binding.test.cpp  P_Data.cpp  P_Data.hpp  P_HashTable.cpp  P_HashTable.test.cpp  P_List.cpp  P_List.test.cpp  P_Queue.cpp  P_Queue.test.cpp
plx/plx/parser/expr/: P_Apply.cpp  P_Apply.test.cpp  P_BinOpExpr.cpp  P_BinOpExpr.test.cpp  P_Do.cpp  P_Do.test.cpp  P_Expr.cpp  P_Expr.hpp  P_Function.cpp  P_Function.test.cpp  P_Identifier.cpp  P_Identifier.test.cpp  P_If.cpp  P_If.test.cpp  P_Let.cpp  P_Let.test.cpp  P_Match.cpp  P_Match.test.cpp  P_ParenExpr.cpp  P_ParenExpr.test.cpp  P_Quote.cpp  P_Quote.test.cpp  P_Throw.cpp  P_Throw.test.cpp  P_TryCatch.cpp  P_TryCatch.test.cpp
plx/plx/parser/literal/: P_Literal.cpp  P_Literal.hpp  P_Literal.test.cpp
plx/plx/prim/: Array.cpp  Array.hpp  Data.cpp  Data.hpp  DefinePrims.cpp  DefinePrims.hpp  Global.cpp  Global.hpp  HashTable.cpp  HashTable.hpp  IO.cpp  IO.hpp  List.cpp  List.hpp  Operator.cpp  Operator.hpp  Primitive.cpp  Primitive.hpp  Queue.cpp  Queue.hpp
plx/plx/repl/: REPL.cpp  REPL.hpp  REPL.test.cpp  ReadEvalPrint.cpp  ReadEvalPrint.hpp  ReadEvalPrint.test.cpp
plx/plx/vm/: VM.cpp  VM.hpp  VM.test.cpp
plx/test/: PlxTestFixture.cpp  TestUtils.cpp  test_main.cpp
plx/tests/: PlxTestFixture.cpp  PlxTestFixture.hpp  TestUtils.cpp  TestUtils.hpp
script/: c
